// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button render correctly 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-17u56ix-Button{width:100%;background-color:#ecf0f1;color:#2c3e50;font-size:1em;font-family:'Vazir';-webkit-text-decoration:none;text-decoration:none;padding:16px;border:2px;display:inline-block;position:relative;cursor:pointer;transition-duration:0.4s;}.css-17u56ix-Button:hover{box-shadow:0 4px 16px rgba(0,1,31,0.2);background-color:#16a085;}",
      }
    }
    data-emotion="css 17u56ix-Button"
  />,
  <button
    className="css-17u56ix-Button"
    type="button"
  >
    sample Button
  </button>,
]
`;

exports[`button render correctly danger 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-g0hm74-Button{width:100%;background-color:#e74c3c;color:#2c3e50;font-size:1em;font-family:'Vazir';-webkit-text-decoration:none;text-decoration:none;padding:16px;border:2px;display:inline-block;position:relative;cursor:pointer;transition-duration:0.4s;}.css-g0hm74-Button:hover{box-shadow:0 4px 16px rgba(0,1,31,0.2);background-color:#c0392b;}",
      }
    }
    data-emotion="css g0hm74-Button"
  />,
  <button
    className="css-g0hm74-Button"
    type="button"
  >
    sample Button danger
  </button>,
]
`;

exports[`button render correctly loading 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-17u56ix-Button{width:100%;background-color:#ecf0f1;color:#2c3e50;font-size:1em;font-family:'Vazir';-webkit-text-decoration:none;text-decoration:none;padding:16px;border:2px;display:inline-block;position:relative;cursor:pointer;transition-duration:0.4s;}.css-17u56ix-Button:hover{box-shadow:0 4px 16px rgba(0,1,31,0.2);background-color:#16a085;}",
      }
    }
    data-emotion="css 17u56ix-Button"
  />,
  <button
    className="css-17u56ix-Button"
    type="button"
  >
    صبر کنید
  </button>,
]
`;

exports[`button render correctly secondary 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-r96a09-Button{width:100%;background-color:#16a085;color:#2c3e50;font-size:1em;font-family:'Vazir';-webkit-text-decoration:none;text-decoration:none;padding:16px;border:2px;display:inline-block;position:relative;cursor:pointer;transition-duration:0.4s;}.css-r96a09-Button:hover{box-shadow:0 4px 16px rgba(0,1,31,0.2);background-color:#16a085;}",
      }
    }
    data-emotion="css r96a09-Button"
  />,
  <button
    className="css-r96a09-Button"
    type="button"
  >
    sample Button secondary
  </button>,
]
`;
